<resources>
    <string name="app_name">Decision Maker</string>
    <string name="refresh">Refresh</string>
    <string name="enter_your_choices">Enter your Choices</string>
    <string name="activity_2">Activity 2</string>
    <string name="activity_4">Activity 4</string>
    <string name="activity_5">Activity 5</string>
    <string name="enter_your_choices_and_press_decide">Enter your choices and press decide</string>
    <string name="activity_3">Activity 3</string>
    <string name="activity_1">Activity 1</string>
    <string name="decide">Decide</string>
</resources>
