<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.decisionmaker.MainActivity">

    <EditText
        android:id="@+id/ed1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/activity_1"
        android:inputType="textPersonName"
        tools:textColor="@android:color/background_dark" />

    <EditText
        android:id="@+id/ed2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ed1"
        android:layout_alignStart="@+id/ed1"
        android:layout_below="@+id/ed1"
        android:ems="10"
        android:hint="@string/activity_2"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/ed3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ed2"
        android:ems="10"
        android:hint="@string/activity_3"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/ed4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ed3"
        android:layout_alignStart="@+id/ed3"
        android:layout_below="@+id/ed3"
        android:ems="10"
        android:hint="@string/activity_4"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/ed5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ed4"
        android:layout_alignStart="@+id/ed4"
        android:layout_below="@+id/ed4"
        android:ems="10"
        android:hint="@string/activity_5"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_your_choices"
        android:textSize="30sp"
        tools:textColor="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/result"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:text="@string/enter_your_choices_and_press_decide"
        android:textColor="@android:color/holo_orange_dark"
        tools:background="@android:color/background_dark"
        tools:textAlignment="center"
        tools:textSize="18sp" />

    <Button
        android:id="@+id/decide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/result"
        android:layout_marginBottom="21dp"
        android:layout_toEndOf="@+id/ed1"
        android:layout_toRightOf="@+id/ed1"
        android:onClick="des"
        android:text="@string/decide"
        tools:background="@android:color/black"
        tools:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title"
        android:layout_alignTop="@+id/decide"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:text="@string/refresh"
        tools:background="@android:color/background_dark"
        tools:textColor="@android:color/holo_red_dark" />
</RelativeLayout>
